add download button and clean up bayes_helper

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
-TOKEN="DISCORD TOKEN"
-BAYES_USR="bayes@email.com"
-BAYES_PWD="bayesPassword"
+DISCORD_TOKEN="DISCORD TOKEN"
+BAYES_USERNAME="bayes@email.com"
+BAYES_PASSWORD="bayesPassword"
+TOKEN_FILE="token.json"
+GUILDS_ALLOWED="guild1,guild2,guild3"
