--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-DISCORD_TOKEN="DISCORD TOKEN"
-BAYES_USERNAME="bayes@email.com"
-BAYES_PASSWORD="bayesPassword"
-TOKEN_FILE="token.json"
-GUILDS_ALLOWED="guild1,guild2,guild3"
+DISCORD_TOKEN=DISCORDTOKEN
+BAYES_USERNAME=bayes@email.com
+BAYES_PASSWORD=bayesPassword
+TOKEN_FILE=token.json
+GUILDS_ALLOWED=guild1,guild2,guild3
